# multi-model-rag

./: .gitignore  README.md  main.py  pyproject.toml  run.py  test_rag.py  test_report.md  test_results.json
agent/: __init__.py  api.py  config.py  graph.py  state.py
agent/nodes/: formatter.py  query_matcher.py  rag_retriever.py  researcher.py
agent/services/: cleanup.py  report_store.py
docs/: README.md  architecture.md
docs/superpowers/plans/: 2026-04-08-research-agent.md
docs/superpowers/specs/: 2026-04-08-research-agent-design.md
multi-model-rag-v2/: README.md  config.py  document_processor.py  image_handler.py  ingest.py  main.py  rag_chain.py  requirements.txt  vector_store.py
multi-model-rag-v2/chroma_db/: chroma.sqlite3
multimodal_rag/: DOCUMENTATION.md  __init__.py  cli.py  config.py  graph_store.py  ingestion.py  links.py  models.py  rag.py  store.py
notebook/: expt-lab.ipynb
src/: test.py
