[project]
name = "multi-modal-rag"
version = "0.1.0"
description = "Multi-modal RAG over PDFs (text, tables, images) with Gemini and Chroma"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.115.0",
    "google-genai>=1.70.0",
    "httpx>=0.28.0",
    "langchain>=1.2.14",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=0.4.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "unstructured-pytesseract>=0.3.15",
    "unstructured[all-docs]>=0.22.10",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
multimodal-rag = "multimodal_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multimodal_rag"]
